--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@ ul, li {list-style:none;}
 #slide06:checked ~ .slidelist .slideitem {left:-500%;}
 #slide07:checked ~ .slidelist .slideitem {left:-600%;}
 #slide08:checked ~ .slidelist .slideitem {left:-700%;}
+#slide09:checked ~ .slidelist .slideitem {left:-800%;}
+#slide10:checked ~ .slidelist .slideitem {left:-900%;}
+#slide11:checked ~ .slidelist .slideitem {left:-1000%;}
+#slide12:checked ~ .slidelist .slideitem {left:-1100%;}
+#slide13:checked ~ .slidelist .slideitem {left:-1200%;}
+#slide14:checked ~ .slidelist .slideitem {left:-1300%;}
+#slide15:checked ~ .slidelist .slideitem {left:-1400%;}
 
 .slide-control [class*="control"] {display:none;}
 #slide01:checked ~ .slide-control .control01 {display:block;}
@@ -33,6 +40,13 @@ ul, li {list-style:none;}
 #slide06:checked ~ .slide-control .control06 {display:block;}
 #slide07:checked ~ .slide-control .control07 {display:block;}
 #slide08:checked ~ .slide-control .control08 {display:block;}
+#slide09:checked ~ .slide-control .control09 {display:block;}
+#slide10:checked ~ .slide-control .control10 {display:block;}
+#slide11:checked ~ .slide-control .control11 {display:block;}
+#slide12:checked ~ .slide-control .control12 {display:block;}
+#slide13:checked ~ .slide-control .control13 {display:block;}
+#slide14:checked ~ .slide-control .control14 {display:block;}
+#slide15:checked ~ .slide-control .control15 {display:block;}
 
 </style>
 
@@ -46,6 +60,13 @@ ul, li {list-style:none;}
 	<input type="radio" name="slide" id="slide06">
 	<input type="radio" name="slide" id="slide07">
 	<input type="radio" name="slide" id="slide08">
+	<input type="radio" name="slide" id="slide09">
+	<input type="radio" name="slide" id="slide10">
+	<input type="radio" name="slide" id="slide11">
+	<input type="radio" name="slide" id="slide12">
+	<input type="radio" name="slide" id="slide13">
+	<input type="radio" name="slide" id="slide14">
+	<input type="radio" name="slide" id="slide15">
 	<ul class="slidelist">
 		<li class="slideitem">
 			<a><img src="./img/뮤지컬 웹팜플렛.png"></a>
@@ -71,11 +92,32 @@ ul, li {list-style:none;}
 		<li class="slideitem">
 			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
 		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
+		<li class="slideitem">
+			<a><img src="./img/뮤지컬 웹팜플렛8.png"></a>
+		</li>
 		
 	</ul>
 	<div class="slide-control">
 		<div class="control01">
-			<label for="slide08" class="prev"></label>
+			<label for="slide15" class="prev"></label>
 			<label for="slide02" class="next"></label>
 		</div>
 		<div class="control02">
@@ -89,6 +131,7 @@ ul, li {list-style:none;}
 		<div class="control04">
 			<label for="slide03" class="prev"></label>
 			<label for="slide05" class="next"></label>
+		</div>
 		<div class="control05">
 			<label for="slide04" class="prev"></label>
 			<label for="slide06" class="next"></label>
@@ -103,6 +146,34 @@ ul, li {list-style:none;}
 		</div>
 		<div class="control08">
 			<label for="slide07" class="prev"></label>
+			<label for="slide09" class="next"></label>
+		</div>
+		<div class="control09">
+			<label for="slide08" class="prev"></label>
+			<label for="slide10" class="next"></label>
+		</div>
+		<div class="control10">
+			<label for="slide09" class="prev"></label>
+			<label for="slide11" class="next"></label>
+		</div>
+		<div class="control11">
+			<label for="slide10" class="prev"></label>
+			<label for="slide12" class="next"></label>
+		</div>
+		<div class="control12">
+			<label for="slide11" class="prev"></label>
+			<label for="slide13" class="next"></label>
+		</div>
+		<div class="control13">
+			<label for="slide12" class="prev"></label>
+			<label for="slide14" class="next"></label>
+		</div>
+		<div class="control14">
+			<label for="slide13" class="prev"></label>
+			<label for="slide15" class="next"></label>
+		</div>
+		<div class="control15">
+			<label for="slide14" class="prev"></label>
 			<label for="slide01" class="next"></label>
 		</div>
 	</div>
