--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ ul, li {list-style:none;}
 			<a><img src="./img/뮤지컬 웹팜플렛 확성 표지.png"></a>
 		</li>
 		<li class="slideitem">
-			<a><img src="./img/뮤지컬 웹팜플렛 확성2.png"></a>
+			<a><img src="./img/뮤지컬 웹팜플렛2.png"></a>
 		</li>
 		<li class="slideitem">
-			<a><img src="./img/뮤지컬 웹팜플렛 확성3.png"></a>
+			<a><img src="./img/뮤지컬 웹팜플렛3.png"></a>
 		</li>
 		<li class="slideitem">
 			<a><img src="./img/뮤지컬 웹팜플렛 확성4.png"></a>
